# Efficient-dLLM-Inference

./: .gitignore  .swp  3.22_run1  GRPO_status.txt  README.md  SETUP.md  SYNC_5.3.md  SYNC_5.5.md  check_heads.py  dInfer_nan_guard.diff  diff_staged.diff  diff_todo.diff  dlm_order_variants.md  exp.ipynb  exp_3_22.txt  log3_23.txt  make_figure_pareto.py  make_figure_pareto_combined.py  out.txt  output.txt  profile_loop.py  pyproject.toml  reproduce.sh  requirements.txt  run_blk_poc1.sh  run_eval.py  run_train.py  setup.sh  unified_policy_head_v2.md  unified_policy_head_v2_prompt.md  warmstart-rl-results.md  warmstart-rl.md
aoae/: __init__.py  agreement_signals.py  cache.py  checkpoints.py  cli.py  code_eval.py  diff_sorry.diff  dinfer_integration.py  evaluate.py  evaluators.py  experiment_utils.py  inference.py  kv_dynamics.py  paper.py  phase_a_v2.py  plot_pareto.py  positional_cache.py  preflight.py  proposal.tex  reporting.py  runtime_checks.py  sglang_integration.py  speculative_inference.py  tasks.py  train_grpo.py  train_prism.py  train_warmstart.py
configs/: ablation.yaml  default.yaml  default_large.yaml  default_mid.yaml  dual_mini_fast.yaml  dual_mini_tau0001.yaml  dual_mini_tau001.yaml  dual_mini_tau005.yaml  dual_mini_tau01.yaml  dual_mini_tau02.yaml  dual_mini_tau05.yaml  eval_anyorder_baselines.yaml  eval_anyorder_fixed_gsm8k.yaml  eval_anyorder_fixed_math500.yaml  eval_full_anyorder_gsm8k.yaml  eval_full_anyorder_math500.yaml  eval_full_block_bestgrpo_gsm8k.yaml  eval_full_block_bestgrpo_math500.yaml  eval_full_block_gsm8k.yaml  eval_full_humaneval.yaml  (+79 more)
(+793 files in other folders)
