[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoae"
version = "0.1.0"
description = "Any-Order Adaptive Editing for Masked Diffusion LLMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.46.3",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
full = [
    "vllm",
]

[project.scripts]
aoae = "aoae.cli:main"

[tool.setuptools.packages.find]
include = ["aoae*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "external",
    "outputs",
    "logs",
    ".git",
    ".pytest_cache",
]
